Fix overflow. Fix keyboard input

--- a/css/tutorial.styl
+++ b/css/tutorial.styl
@@ -22,6 +22,7 @@
     text-align: center
 
   .media-card.tutorial-step
+    overflow: auto
     z-index: 1
 
     > .media-card-header
